--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
         "type": "shell",
         "label": "g++ build active file",
         "command": "/usr/bin/g++",
-        "args": ["-g", "${fileDirname}/*.cpp", "-o", "${fileDirname}/a.out"],
+        "args": ["-g", "${fileDirname}/*.cpp", "-o", "${fileDirname}/a.out", "-std=c++17"],
         "options": {
           "cwd": "/usr/bin"
         },
